--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,8 @@
-# This file specifies how the project should be built, using CMake.
-# If you are unfamiliar with CMake, don't worry about all the details.
-# The sections you might want to edit are marked as such, and
-# the comments should hopefully make most of it clear.
-#
-# For many purposes, you may not need to change anything about this file.
+# This is a new language which called X language
 
 cmake_minimum_required(VERSION 3.9)
 
-# Set project name, version and laguages here. (change as needed)
-# Version numbers are available by including "exampleConfig.h" in
-# the source. See exampleConfig.h.in for some more details.
-project(EXAMPLE-CPP VERSION 1.2.3.4 )
+project(X VERSION 0.1 )
 
 SET(MAIN_EXECUTE example)
 set(CMAKE_BUILD_TYPE Debug)
@@ -19,7 +11,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY  executable)
 set(CMAKE_CXX_STANDARD 17)
 
 message("--------------------------------------------")
-include_directories(src/log/)
+include_directories(${CMAKE_HOME_DIRECTORY}/src/log)
 message("--------------------------------------------")
 
 
@@ -62,7 +54,7 @@ set(SOURCES          # All .cpp files in src/
 message("SOURCES: " ${SOURCES})
 
 set(TESTFILES        # All .cpp files in tests/
-    tests/main.cpp
+    tests/X.cpp
 )
 set(LIBRARY_NAME engine)  # Default name for the library built from src/*.cpp (change if you wish)
 
@@ -82,7 +74,7 @@ target_include_directories(${LIBRARY_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
 target_set_warnings(${LIBRARY_NAME} ENABLE ALL AS_ERROR ALL DISABLE Annoying)
 # target_compile_options(${LIBRARY_NAME} ... )  # For setting manually.
 
-# Add an executable for the file app/main.cpp.
+# Add an executable for the file app/x.cpp.
 # If you add more executables, copy these lines accordingly.
 add_executable(${MAIN_EXECUTE} app/X.cpp)   # Name of exec. and location of file.
 target_link_libraries(${MAIN_EXECUTE} PRIVATE ${LIBRARY_NAME} pthread)  # Link the executable to library (if it uses it).
