--- a/dep/restclient/CMakeLists.txt
+++ b/dep/restclient/CMakeLists.txt
@@ -13,7 +13,7 @@ add_library(${LIBRARY_NAME}
 
 target_include_directories(${LIBRARY_NAME}
         PUBLIC
-        ${PROJECT_SOURCE_DIR}/src
+        ../../src
         )
 
 # must
